--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -12,6 +12,8 @@ services:
     env_file: .env
     volumes:
       - pg_data_production:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=postgres
   backend:
     image: tapp41k/taski_backend
     env_file: .env
